kubernetes-user/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-app-user
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/abelov/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-app-user
                port:
                  number: 80
